--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "3.10.8"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
