--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "jsmodbus": "^2.3.0",
+    "mongoose": "^4.12.6",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "react": "^16.0.0"
